[gd_scene load_steps=6 format=3 uid="uid://bkq7hs3kvss2m"]

[ext_resource type="Script" path="res://scenes/results.gd" id="1_acwed"]
[ext_resource type="PackedScene" uid="uid://bdgkvmwm3jks1" path="res://scenes/background.tscn" id="2_fe8lu"]
[ext_resource type="Script" path="res://scenes/autoscroll_background.gd" id="3_gwpv7"]
[ext_resource type="StyleBox" uid="uid://dl0xufa2op3rl" path="res://styles/button_normal.tres" id="4_efp42"]
[ext_resource type="StyleBox" uid="uid://cq3kge22ppogc" path="res://styles/button_focused.tres" id="5_fcgfw"]

[node name="Results" type="Node2D"]
script = ExtResource("1_acwed")

[node name="ParallaxBackground" parent="." instance=ExtResource("2_fe8lu")]
script = ExtResource("3_gwpv7")

[node name="Score" type="Label" parent="."]
offset_top = -200.0
offset_right = 1150.0
offset_bottom = -117.0
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 60
text = "Score: 0
"
horizontal_alignment = 1

[node name="Percentages" type="Node2D" parent="."]
position = Vector2(0, 400)

[node name="PerfectPercentageTitle" type="Label" parent="Percentages"]
offset_left = 300.0
offset_top = 400.0
offset_right = 403.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0, 0.964706, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Perfect"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PerfectPercentage" type="Label" parent="Percentages/PerfectPercentageTitle"]
offset_left = -30.0
offset_top = -65.0
offset_right = 71.0
offset_bottom = 4.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "0.00%"
horizontal_alignment = 1

[node name="GoodPercentageTitle" type="Label" parent="Percentages"]
offset_left = 550.0
offset_top = 400.0
offset_right = 627.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0.929412, 0.607843, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Good"

[node name="GoodPercentage" type="Label" parent="Percentages/GoodPercentageTitle"]
offset_left = -40.0
offset_top = -65.0
offset_right = 61.0
offset_bottom = 4.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "0.00%"
horizontal_alignment = 1

[node name="MissPercentageTitle" type="Label" parent="Percentages"]
offset_left = 800.0
offset_top = 400.0
offset_right = 877.0
offset_bottom = 442.0
theme_override_colors/font_color = Color(0.976471, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "Miss"

[node name="MissPercentage" type="Label" parent="Percentages/MissPercentageTitle"]
offset_left = -40.0
offset_top = -65.0
offset_right = 61.0
offset_bottom = 4.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 50
text = "0.00%"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="."]
offset_left = 500.0
offset_top = 850.0
offset_right = 650.0
offset_bottom = 910.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = ExtResource("4_efp42")
theme_override_styles/hover = ExtResource("5_fcgfw")
theme_override_styles/pressed = ExtResource("4_efp42")
theme_override_styles/focus = ExtResource("5_fcgfw")
text = "Back"

[node name="PercentagesPosition" type="Node2D" parent="."]

[node name="BackButtonPosition" type="Node2D" parent="."]
position = Vector2(500, 550)

[node name="ScorePosition" type="Node2D" parent="."]
position = Vector2(0, 110)

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
